// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalRow /> should render proposal displayed 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  in={true}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <div>
    <h4>
      <a
        href="http://perdu.com"
        title="perdu sur internet ?"
      >
        perdu sur internet ?
      </a>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "float": "right",
          }
        }
      >
        <FormattedMessage
          id="unfollow"
          values={Object {}}
        />
      </Button>
    </h4>
  </div>
</Collapse>
`;

exports[`<ProposalRow /> should render proposal hidden 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  in={false}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <div>
    <h4>
      <a
        href="http://perdu.com"
        title="perdu sur internet ?"
      >
        perdu sur internet ?
      </a>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "float": "right",
          }
        }
      >
        <FormattedMessage
          id="unfollow"
          values={Object {}}
        />
      </Button>
    </h4>
  </div>
</Collapse>
`;
